# mboxshell

./: CHANGELOG-ES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README-ES.md  README.md  SECURITY.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: MANUAL-ES.md  MANUAL.md
src/: main.rs
src/export/: eml.rs  html.rs  mod.rs
src/i18n/: mod.rs
src/index/: builder.rs  reader.rs
src/parser/: mbox.rs  mime.rs
src/search/: metadata.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs  threading.rs  ui.rs
src/tui/widgets/: body_search_bar.rs  export_popup.rs  help_popup.rs  mail_view.rs  mod.rs  search_bar.rs  search_popup.rs  status_bar.rs
